# dicp

./: CMakeLists.txt  LICENSE
src/: main.cpp
src/dicp/: DicpCommand.cpp  DicpCommand.h  DicpImage.cpp  DicpImage.h  DicpProblem.cpp  DicpProblem.h
test/005images-025cmds/: input.json
test/005images-050cmds/: input.json
test/005images-075cmds/: input.json
test/005images-100cmds/: input.json
test/010images-025cmds/: input.json
test/010images-050cmds/: input.json
test/010images-075cmds/: input.json
test/010images-100cmds/: input.json
test/015images-025cmds/: input.json
test/015images-050cmds/: input.json
test/015images-075cmds/: input.json
test/015images-100cmds/: input.json
test/020images-025cmds/: input.json
test/020images-050cmds/: input.json
test/020images-075cmds/: input.json
test/020images-100cmds/: input.json
test/025images-025cmds/: input.json
test/025images-050cmds/: input.json
test/025images-075cmds/: input.json
test/025images-100cmds/: input.json
test/030images-025cmds/: input.json
test/030images-050cmds/: input.json
test/030images-075cmds/: input.json
test/030images-100cmds/: input.json
test/035images-025cmds/: input.json
test/035images-050cmds/: input.json
test/035images-075cmds/: input.json
test/035images-100cmds/: input.json
test/040images-025cmds/: input.json
test/040images-050cmds/: input.json
test/040images-075cmds/: input.json
test/040images-100cmds/: input.json
test/045images-025cmds/: input.json
test/045images-050cmds/: input.json
test/045images-075cmds/: input.json
test/045images-100cmds/: input.json
test/050images-025cmds/: input.json
test/050images-050cmds/: input.json
test/050images-075cmds/: input.json
test/050images-100cmds/: input.json
(+7 files in other folders)
